2005-12-16  Mike Kestner  <mkestner@novell.com>

	* gdk/PixbufLoader.custom (InitFromAssemblyResource): move stream
	access code outside the try block so only the Load is cleaned up with 
	the finally block. Add some other arg checking. [Fixes #76997]

2005-12-13  Mike Kestner  <mkestner@novell.com>

	* sources/Makefile.am : move to stable gtk 2.8 versions.
	* sources/gtk-sharp-2.8-sources.xml : move to stable gtk 2.8 versions.
	* */*.raw : regenerate.
	* gdk/Gdk.metadata : hide a few gtk+ internal methods.
	* gtk/Gtk.metadata : hide a win32 internal enum.

2005-12-13  Mike Kestner  <mkestner@novell.com>

	* bootstrap-2.8 : bump version to 2.7.90.

2005-12-13  Mike Kestner  <mkestner@novell.com>

	* gconf/GConf/Makefile.am : add GAPI_CDECL_INSERT step.
	* gconf/GConf.PropertyEditors/Makefile.am : add GAPI_CDECL_INSERT step.

2005-12-13  Mike Kestner  <mkestner@novell.com>

	* configure.in.in : check for mono-cairo.pc.
	* Makefile.include : use AC_SUBST for cairo ref.
	* gdk/Gdk.metadata : s/Cairo.Graphics/Cairo.Context.

2005-12-12  Mike Kestner  <mkestner@novell.com>

	* gnomevfs/Gnomevfs.metadata : mark some const strings.
	[Fixes #76270]

2005-12-12  Mike Kestner  <mkestner@novell.com>

	* gdk/EventClient.cs : fix native long marshaling issue. Thanks to 
	 ed@catmur.co.uk for the bug report and investigation.
	[Fixes #76740]

2005-12-12  Itamar Rogel  <chastamar@yahoo.com>

	* NodeView.cs : add default ctor and NodeStore setter.
	[Fixes #76827]

2005-12-12  Mike Kestner  <mkestner@novell.com>

	* generator/Signal.cs : pass byte cnt for autogenerated string length
	parameters.  Thanks to Itamar Rogel for the report and a candidate
	patch. [Fixes #76952]

2005-12-10  Mike Kestner  <mkestner@novell.com>

	* gtk/gtk-api-2.8.raw : regenerated.
	* gtk/IconView.custom : manually implement a new interface method.
	* parser/gapi_pp.pl : more general G_DEFINE_TYPE_WITH_CODE parsing
	implementation.
	[Fixes #76266]

2005-12-10  Mike Kestner  <mkestner@novell.com>
