@@ -1,3 +1,9 @@
+2005-12-16  John Luke  <john.luke@gmail.com>
+
+	* samples/CairoSample.cs:
+	* samples/GtkCairo.cs:
+	* samples/Makefile.am: update the cairo sample, fixes bug #76324
+	
 2005-12-16  Mike Kestner  <mkestner@novell.com>
 
 	* gdk/PixbufLoader.custom (InitFromAssemblyResource): move stream
